--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
+    "d3": "7.1.1",
     "mysql": "^2.18.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -16,6 +17,7 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
     "sweetalert2": "^11.1.7",
+    "victory": "36.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
