--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,16 +8,17 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
+    "chart.js": "^2.9.4",
     "d3": "7.1.1",
     "mysql": "^2.18.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^2.9.4",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "6.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
     "sweetalert2": "^11.1.7",
-    "victory": "36.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
