--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "8.5.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "rand-token": "1.0.1"
   }
 }
