--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
     "sweetalert2": "^11.1.7",
+    "universal-cookie": "4.0.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
