--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "6.1.0",
+    "react-modern-calendar-datepicker": "3.1.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
