--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.22.0",
     "chart.js": "^2.9.4",
     "d3": "7.1.1",
+    "moment": "2.29.1",
     "mysql": "^2.18.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^2.9.4",
