--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
     "rand-token": "1.0.1",
-    "request": "2.88.2"
+    "request": "2.88.2",
+    "request-promise": "4.2.6"
   }
 }
